--- a/sheet.css
+++ b/sheet.css
@@ -1,3 +1,6 @@
+head{
+  background-color: aqua;
+}
 body {
     background-color: rgb(71, 50, 71);
   }
@@ -13,7 +16,7 @@ body {
     background-clip: text;
     -webkit-background-clip: text;
   }
-  p {
+  #para1{
     color: rgb(116, 98, 0);
     font-family: 'Courier New', Courier, monospace;
     font-size: 160%;
@@ -21,3 +24,31 @@ body {
     padding: 10px;
     margin: 15px;
   }
+
+  /* Add a black background color to the top navigation */
+.topnav {
+  background-color: rgb(13, 71, 62);
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #ffa4a4;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: rgb(175, 2, 2);
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #8ea49b;
+  color: white;
+}
